# palace-quicksight

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: lint.yml  mypy.yml  test-build.yml
core/: cli.py  util.py
core/operation/: baseoperation.py  export_analysis_operation.py  import_from_json_operation.py  publish_dashboard_from_template.py
tests/core/: test_cli.py
tests/core/operation/: analysis_test_responses.py  test_export_analysis_operation.py  test_import_template_operation.py  test_publish_operation.py
tests/core/operation/resources/assets/data-sets/: circulation_view-data-set-refresh-schedules.json  circulation_view.json  patron_events.json
tests/core/operation/resources/assets/templates/: library.json
