[tool.poetry]
name = "palace-quicksight"
version = "0.1.0"
description = ""
authors = ["Daniel Bernstein <daniel.bernstein@lyrasis.org>"]
readme = "README.md"
packages = [{include = "main.py"}]
repository = "https://github.com/dbernstein/palace-quicksight"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.18"
botocore = "^1.21"
click = "^8.1.3"
ghapi = "^1.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

