[tool.poetry]
name = "palace-quicksight"
version = "0.1.0"
description = ""
authors = ["Daniel Bernstein <daniel.bernstein@lyrasis.org>"]
readme = "README.md"
packages = [{include = "core"}]
repository = "https://github.com/dbernstein/palace-quicksight"

[tool.poetry.group.ci.dependencies]
dunamai = "^1.16"
pre-commit = "^3.2"
tox = "^4.4"
tox-docker = "^4.1"
tox-gh-actions = "^3.0"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.18"
botocore = "^1.21"
click = "^8.1.3"
pytest= ">=7.2.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
