[tool.poetry]
name = "palace-quicksight"
version = "0.1.0"
description = ""
authors = ["Daniel Bernstein <daniel.bernstein@lyrasis.org>"]
readme = "README.md"
packages = [{include = "core"}]
repository = "https://github.com/dbernstein/palace-quicksight"

[tool.poetry.group.ci.dependencies]
dunamai = "^1.16"
pre-commit = "^3.2"
tox = "^4.4"
tox-docker = "^4.1"
tox-gh-actions = "^3.0"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.18"
botocore = "^1.21"
click = "^8.1.3"
pydantic = "^2.4.2"


[tool.poetry.group.dev.dependencies]
boto3-stubs = "^1.26.81"
botocore-stubs = "^1.29.81"
mypy = "^1.4.1"
pyfakefs = "~5.2.0"
pytest = ">=7.2.0"
pytest-timeout = "*"
requests-mock = "1.11.0"
types-python-dateutil = "^2.8.19"
types-pytz = "^2023.2"

[tool.isort]
known_first_party = ["core" ]
profile = "black"

[tool.mypy]
check_untyped_defs = true
disable_error_code = "annotation-unchecked"
exclude = []
files = ["."]
plugins = ["pydantic.mypy",]


[[tool.mypy.overrides]]
# In our tests, we often overwrite methods on classes to mock out behavior.
# This is a common pattern in Python, but mypy doesn't like it. This override
# silences those errors, but only for the tests module.
# See discussion here:
# https://github.com/python/mypy/issues/2427
disable_error_code = "method-assign"
module = "tests.*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
